engine-net-2/examples/Errors/SequenceParametersInTypeMismatch.grs
new graph "Rules.grg"

exec (m:M)=init ;> (n:N)=s(m)

quit
